snapshots/parsers/cst/parameters/parameter_list_preserves_whitespace.snap
---
source: src/parsers/cst/parameters.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Whitespace
              text: "  "
            - kind: Identifier
              text: x
            - kind: Whitespace
              text: "   "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: "   "
            - kind: IntegerKeyword
              text: Integer
            - kind: Whitespace
              text: "  "
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: "  "
            - kind: Identifier
              text: y
            - kind: Whitespace
              text: "   "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: "   "
            - kind: LongKeyword
              text: Long
            - kind: Whitespace
              text: "  "
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children: []
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
